--- a/circle.yml
+++ b/circle.yml
@@ -9,5 +9,5 @@ deployment:
   production:
     branch: master
     commands:
-      - rsync -rptzl -e ssh --delete ./ scenario-runner@23.251.153.136:/home/scenario-runner
-      - ssh scenario-runner@23.251.153.136 'crontab -r; crontab ~/cronfile'
+      - rsync -rptzl -e ssh --delete ./ scenario-runner@23.251.153.136:/home/scenario-runner/config
+      - ssh scenario-runner@23.251.153.136 'crontab -r; crontab ~/config/cronfile'
